--- a/index.html
+++ b/index.html
@@ -11,7 +11,11 @@
 </head>
 
 <body>
-  <main id="main"></main>
+  <!-- <main id="main"></main> -->
+
+  <div class="game-container">
+    <canvas class="game-canvas" height="160" width="240"></canvas>
+  </div>
 </body>
 
 </html>
