--- a/index.html
+++ b/index.html
@@ -7,6 +7,19 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
   <link rel="stylesheet" href="./dist/main.css" />
   <script src="./dist/main.js"></script>
+  <!-- <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/howler/2.2.3/howler.js"></script>
+  <script>
+    setTimeout(() => {
+      const sound = new Howl({
+        src: ['./src/sounds/music.mp3']
+      });
+
+      console.log(sound)
+
+      sound.play()
+    }, 3000)
+    
+  </script> -->
   <title>Javascript Project</title>
 </head>
 
