Add mute button

--- a/index.html
+++ b/index.html
@@ -25,6 +25,9 @@
 
 <body>
   <!-- <main id="main"></main> -->
+  <div>
+    <button class="mute-btn">Mute</button>
+  </div>
 
   <div class="game-container">
     <canvas class="game-canvas" height="160" width="240"></canvas>
