--- a/index.html
+++ b/index.html
@@ -29,16 +29,16 @@
     <div class="splash-page" id="instructions">
       <h1>instructions</h1>
       <p>here's some instructions blah blah blah</p>
-      <p>click to start</p>
+      <h1>click to start</h1>
     </div>
 
     <div class="splash-page" id="title">
-      <h1>Title</h1>
-      <p>click to continue</p>
+      <h1>click to continue</h1>
     </div>
     
     <div id="ready">
       <h1></h1>
+      <h2></h2>
     </div>
 
     <div id="meter">
@@ -46,12 +46,12 @@
     </div>
 
     <div class="splash-page" id="win">
-      <h1>you win!</h1>
+      <h1>the end?</h1>
       <p>reload page to try again</p>
     </div>
   
     <div class="splash-page" id="lose">
-      <h1>you dead!</h1>
+      <h1>you had one job</h1>
       <p>reload page to try again</p>
     </div>
   </div>
