--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <i class="fa-brands fa-linkedin fa-2xl"></i>  
       </a>
       
-      <a href="https://github.com/madeleinepla" target="_blank">
+      <a href="https://github.com/madeleinepla/javascript_project" target="_blank">
         <i class="fa-brands fa-github-square fa-2xl"></i>
       </a>
       
@@ -51,6 +51,8 @@
         the closer you let it get with each spook, the more "i'm a big boy" points you earn. 
         turn wisely.</p>
 
+        <p>(use arrows or wasd to move)</p>
+
         <p>(turn on silent mode to play with no sound and use the noise meter instead)</p>
       <h2>click to start</h2>
     </div>
@@ -66,7 +68,8 @@
 
     <div id="win">
       <h2>the end?</h2>
-      <p>reload page to try again</p>
+      <p id="score">before</p>
+      <p>reload page to play again</p>
     </div>
   
     <div id="lose">
