--- a/index.html
+++ b/index.html
@@ -18,10 +18,12 @@
 </head>
 
 <body>
-
-  <h1>Blights Out</h1>
-  
   <div class="header">
+    <h1>Blights Out</h1>
+    <h4>by madeleine pla</h4>
+  </div>
+  
+  <div class="buttons">
 
     <button class="mute-btn">silent mode: off</button>
 
